--- a/nature/css/custom.css
+++ b/nature/css/custom.css
@@ -96,36 +96,63 @@
   display: block !important;
 }
 
+.left-column-item
+{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.circle-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
+  flex: inherit;
+}
+
+.fw-normal {
+  font-weight: 400;
+  flex: auto;
+  text-align: left;
+  margin-left: 30px;
+}
+
+.rounded-rectangle {
+  width: 400px;
+  height: 70px;
+  background-color: rgba(255, 255, 255, 0.904);
+  border-radius: 20px; /* Rounded corners */
+  margin: 20px 20px 20px 20px;
+  align-content: center;box-shadow: 4px 4px 10px rgba(0,0,0,0.5);
+}
+
+.column-container {
+  display: flex;
+  gap: 30px;
+  width: 98%;
+}
 
 .left-column {
-  background: linear-gradient(to bottom, #cfe2ff, #c0d1ee); /* Gradient for depth */
-  height: 100vh; /* Full height */
-  padding: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 3D effect */
-}
-.separator {
-  width: 2%; /* Width of the shadow line */
-  height: 100vh; /* Full height */
-  background: rgba(240, 233, 233, 0.2); /* Transparent background */
-  box-shadow: 3px 0 10px rgba(12, 12, 12, 0.2); /* Dull shadow effect */
-}
-.right-column {
-  background: linear-gradient(to bottom, #f2f5f3, #b8e0d8); /* Gradient for depth */
-  height: 100vh; /* Full height */
-  padding: 15px;
-  box-shadow: -4px 0 8px rgba(0, 0, 0, 0.2); /* 3D effect */
+  flex: 0 0 25%;
 }
 
-@media (min-width: 768px) {
-  .col-md-1 {
-   
-   flex: 0 0 1.3%;
-  max-width: 11.333%;
+.right-column {
+  flex: 0 0 70%;
+  margin: 30px 30px 50px 30px;
+  flex-wrap: wrap;
+
 }
+
+p {
+  margin: 20px 20px 20px 20px;
+  font-size: x-large;
+  text-align: justify;
 }
-@media (min-width: 768px) {
-  .col-md-8 {
-    flex: 0 0 auto;
-    width: 71.667%;
-  }
-}
+
+.image-right {
+  display: block;
+  width: 30%;
+  margin: 0 auto;
+} 
